--- a/hosting/index.html
+++ b/hosting/index.html
@@ -75,7 +75,7 @@
 	</form>
 
 	<script src="http://cdn.wedeploy.com/api/latest/wedeploy.js"></script>
-	<script type="text/javascript" src="js/main.js"></script>
+	<script type="text/javascript" src="js/dist/bundle.js"></script>
 	<script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
